Gaim: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.59.6 (11/07/2002):
	* Fixed a segfault introduced in 0.59.5 when gtk
	  fails to read the ~/.gtkrc or reads it but fails
	  to create a style from it.
	* Jabber conference timestamps are no longer gigantic

version 0.59.5 (10/14/2002):
	* Fixed a Yahoo! segfault (Thanks, Craig Metz)

version 0.59.4 (10/06/2002):
	* Removed color keybinnding altogether.
	* Added a horizontal scrollbar to Edit page of
	   buddy list. (Thanks, David Fallon)
	* Various bug fixes ((Thanks to (in no particular order)
	  Ethan Blanton, Mark Doliner, Luke Schierer)
	* i18n fixes (thanks, A Lee)

version 0.59.3 (09/14/2002):
	* Reversed patch that accidentally caused Yahoo
	  not to connect--for implementation reasons
	* Changed "color" binding to Ctrl-K.
	* Unaliaising a person in the "Online" tab will show up
	  in the "Edit" tab as well (Thanks, Jason Willis)
	* Internationalization fixes, esp. with UTF-8 locales 
	  (Thanks Matt Wilson and Ethan Blanton)

version 0.59.2 (09/09/2002):
	* Japanese translation updated (Thanks, Junichi Uekawa)
	* Won't crash when you set your MSN Friendly name to an
	  empty string.
	* Default manual browser command changed to reflect the
	  fix in 0.59.1
	* Fixed the non-manual browser settings which were broke in
	  0.59.1 (Thanks, Chris Blizzard)
	* Improved MSN internationalization (Thanks A Lee)
	* Smiley lookup will search for longest match for smilies
	  like :-(( (Thanks Eric Melski)
	* When an IM image is clicked, don't open the browser (Thanks
	  Ari Pollak)
	* Prevent a possible crash in unhide_buddy_list() (Thanks Ari
	  Pollak)
	* Fixed a compilation problem on systems without iconv.
	* GtkIMHtml can be set to render font sizes as point size
	  or AIMish relative sizes -- no more huge Yahoo fonts. (Thanks
	  Ka-Hing Cheung)
	* Fixed a bug with regard to Jabber resources (Thanks Nathan
	  Walp)
	* Fixed a possible segfault when signing off Jabber (Thanks
	  Craig Boston)