@@ -5,6 +5,7 @@ version 0.59.6 (11/07/2002):
 	  fails to read the ~/.gtkrc or reads it but fails
 	  to create a style from it.
 	* Jabber conference timestamps are no longer gigantic
+	* Yahoo i18n fix (Thanks Ethan Blanton).
 
 version 0.59.5 (10/14/2002):
 	* Fixed a Yahoo! segfault (Thanks, Craig Metz)
